--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,7 @@
   position: static;
   background-color: #ffffff;
 }
-.feedback,
-.feedback * {
-  box-sizing: border-box;
-}
+
 .feedback {
   background: #ffffff;
   height: 1080px;
@@ -224,6 +221,33 @@
   width: 100%;
   flex: 0 0 auto;
 }
+ .div-about1 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: relative;
+  align-self: stretch;
+  width: 100%;
+  flex: 0 0 auto;
+}
+ .div-about {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: relative;
+  align-self: stretch;
+  width: 100%;
+  flex: 0 0 auto;
+}
+ .div-benifit {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: relative;
+  align-self: stretch;
+  width: 100%;
+  flex: 0 0 auto;
+}
 
 .frame .section {
   min-height: 714.4px;
@@ -239,10 +263,9 @@
 }
 
 .header {
-  display: flex;
-  width: 1903px;
-  height: 96px;
-  z-index:100;
+  display:block;
+  height: 144px;
+
   align-items: center;
   justify-content: center;
   gap: 354px;
@@ -250,7 +273,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #37517e;
+
 }
 
 
@@ -310,6 +333,8 @@
   position: relative;
   flex: 1;
   flex-grow: 1;
+  top: -53px;
+  left: 460px;
 }
 
 .frame .link-margin {
@@ -624,11 +649,171 @@ button:hover .button-text {
   /* padding: 139.01px 12px 139.03px; */
   position: relative;
   align-self: stretch;
-  width: 139;
-  animation: flash 500ms both;
 }
 
-@keyframes flash {
+
+
+
+
+
+
+
+
+
+
+.spin {
+  animation: spin 6.5s infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: translateY(0);
+  }
+
+  10% {
+    transform: translateY(-100%);
+  }
+
+  20% {
+    transform: translateY(-100%);
+  }
+
+  30% {
+    transform: translateY(-200%);
+  }
+
+  40% {
+    transform: translateY(-200%);
+  }
+
+  50% {
+    transform: translateY(-300%);
+  }
+
+  60% {
+    transform: translateY(-300%);
+  }
+
+  70% {
+    transform: translateY(-400%);
+  }
+
+  80% {
+    transform: translateY(-400%);
+  }
+
+  90% {
+    transform: translateY(-500%);
+  }
+
+  100% {
+    transform: translateY(-500%);
+  }
+}
+.updown{
+  animation:updown 2.5s ;
+
+}
+@keyframes updown{
+  0%{
+    opacity: 0;
+    transform: translateY(-500);
+  }
+
+  100%{
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.flash{
+  animation:flash 2.5s ;
+
+}
+@keyframes flash{
+  0%{
+    opacity: 0;
+
+  }
+
+  100%{
+    opacity: 1;
+
+  }
+}
+
+.fadeinright {
+  
+  animation: fadeinright 2.5s;
+}
+
+@keyframes fadeinright {
+  from {
+    opacity: 0;
+    transform: translateX(900px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.header-anime {
+
+  animation: header-anime 3s;
+}
+
+@keyframes header-anime {
+  from {
+    opacity: 0;
+    transform: translateX(300px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+
+.fadeinleft {
+  animation: fadeinleft 2.5s;
+}
+
+@keyframes fadeinleft {
+  from {
+    opacity: 0;
+    transform: translateX(-900px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+
+
+.float {
+  animation: float 2s ease-in-out infinite alternate;
+}
+
+@keyframes float {
+  0% {
+    transform: translateY(30px);
+  }
+
+  100% {
+    transform: translateY(-20px);
+  }
+}
+
+
+
+.zoomout{
+    animation: zoomout 2.5s both;
+}
+@keyframes zoomout {
   from {
     size: 0;
     transform:scale(125%);
@@ -735,55 +920,7 @@ button:hover .button-text {
   letter-spacing: var(--semantic-heading-1-letter-spacing);
   line-height: var(--semantic-heading-1-line-height);
   font-size: var(--semantic-heading-1-font-size);
-  animation: spin 6.5s infinite;
 }
-
-@keyframes spin {
-  0% {
-    transform: translateY(0);
-  }
-
-  10% {
-    transform: translateY(-100%);
-  }
-
-  20% {
-    transform: translateY(-100%);
-  }
-
-  30% {
-    transform: translateY(-200%);
-  }
-
-  40% {
-    transform: translateY(-200%);
-  }
-
-  50% {
-    transform: translateY(-300%);
-  }
-
-  60% {
-    transform: translateY(-300%);
-  }
-
-  70% {
-    transform: translateY(-400%);
-  }
-
-  80% {
-    transform: translateY(-400%);
-  }
-
-  90% {
-    transform: translateY(-500%);
-  }
-
-  100% {
-    transform: translateY(-500%);
-  }
-}
-
 
 
 
@@ -963,6 +1100,7 @@ button:hover .button-text {
   position: relative;
   width: 40px;
   height: 40px;
+  
 }
 
 .frame .home-2 {
@@ -1028,48 +1166,15 @@ button:hover .button-text {
   display: flex;
   align-items: center;
   justify-content: center;
-  animation: flash 2s both, float 2s ease-in-out infinite alternate;
-  /* Combine animations */
-}
 
-@keyframes fadeinright {
-  from {
-    opacity: 0;
-    transform: translateX(50px);
-  }
 
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-
-@keyframes float {
-  0% {
-    transform: translateY(20px);
-  }
-
-  100% {
-    transform: translateY(-20px);
-  }
 }
 
 .hero-img-png {
   display: inline-block;
-  animation: float 1s ease-in-out infinite alternate;
+
 }
 
-
-
-@keyframes float {
-  0% {
-    transform: translateY(20);
-  }
-
-  100% {
-    transform: translateY(-20px);
-  }
-}
 
 .frame .section-2 {
   flex-direction: column;
@@ -1085,10 +1190,10 @@ button:hover .button-text {
 }
 
 
-.contnt{
-  animation: abc 1s ease-in-out;
+.zoom{
+  animation: zoom 1s ease-in-out;
 }
-@keyframes abc {
+@keyframes zoom {
   0% {
     transform: scale3d(.5, .5, .5);
   }
@@ -3189,6 +3294,18 @@ button:hover .button-text {
   flex-direction: column;
   align-items: flex-start;
 }
+.frame.margin-123{
+    display: flex;
+      max-width: 1320px;
+      justify-content: center;
+      padding: 24px 0px 0px;
+      position: relative;
+      flex: 1;
+      align-self: stretch;
+      flex-grow: 1;
+      flex-direction: column;
+      align-items: flex-start
+}
 
 .frame .container-54 {
   display: flex;
@@ -4645,10 +4762,7 @@ margin-left: 650px;
 
 
 
-.feedback,
-.feedback * {
-  box-sizing: border-box;
-}
+
 
 .feedback {
   background: #ffffff;
