Updated code for signup css

--- a/css/signup.css
+++ b/css/signup.css
@@ -43,17 +43,56 @@ body {
     width: 50%;
 }
 
-.logo {
-    text-align: right;
-    margin-bottom: 20px;
-}
 
-.logo img {
-    width: 80px;
-}
+.logo {
+    position: absolute;
+    top: 50px;
+    left: 1559px;
+    display: flex;
+    align-items: center;
+    gap: 10px; 
+  }
+  
+  .logoimg {
+    width: 100px; 
+    height: auto;
+  }
+  
+  .text-container {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .text-a {
+    color: black;
+    position: absolute;
+    height: 117px;
+    top: 50px;
+    left:8px;
+    font-family: "Inknut Antiqua", Helvetica;
+    font-weight: 400;
+    font-size: 18px;
+    letter-spacing: 0;
+    line-height: normal;
+  }
+  
+  .text-k {
+    color:black;
+    position: absolute;
+    height: 17px;
+    top: 85px;
+    left: 42px;
+    font-family: "Inria Sans", Helvetica;
+    font-weight: 700;
+    font-size: 26px;
+    letter-spacing: 5.18px;
+    line-height: normal;
+  }
+  
 
 h2,
 .signup {
+    margin-top: 100px;
     margin-bottom: 10px;
     color: #333;
     font-size: 2rem;
@@ -239,11 +278,11 @@ p {
 
 .social-icons a {
     margin: 0 10px;
-    transition: transform 0.5s; 
+    transition: filter 0.5s ease; 
 }
 
 .social-icons a:hover {
-    transform: scale(1.6); 
+filter: invert(29%) sepia(73%) saturate(747%) hue-rotate(172deg) brightness(95%) contrast(92%);    
 }
 
 .social-icons img {
