--- a/css/terms.css
+++ b/css/terms.css
@@ -2,135 +2,134 @@
 @import url("https://fonts.googleapis.com/css?family=Inknut+Antiqua:400|Inria+Sans:700|Poppins:400,700|Open+Sans:var(--open-sans-regular-16-font-weight),var(--open-sans-semibold-22-font-weight),700,var(--semantic-strong-font-weight),var(--semantic-button-font-weight),var(--open-sans-italic-16-font-weight),var(--semantic-label-font-weight),400,var(--open-sans-regular-14-font-weight),var(--semantic-link-font-weight),var(--open-sans-regular-15-font-weight),italic|Jost:var(--semantic-heading-1-font-weight),700,600,var(--jost-semibold-12-upper-font-weight),var(--semantic-heading-2-font-weight),var(--semantic-heading-3-font-weight),400,var(--semantic-heading-4-font-weight),500|Inter:var(--semantic-item-font-weight),400,var(--inter-regular-26-font-weight)");
 
 body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  margin: 0;
+  padding: 0;
+  background-color: #f4f4f4;
 }
 .head-term {
-    color: var(--color-azure-35, #37517e);
-    text-align: center;
-    font-family: var(--semantic-heading-2-font-family, "Jost-Bold", sans-serif);
-    font-size: var(--semantic-heading-2-font-size, 32px);
-    line-height: var(--semantic-heading-2-line-height, 38.4px);
-    font-weight: var(--semantic-heading-2-font-weight, 700);
-    text-transform: uppercase;
-    text-decoration: underline;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-bottom: 100px;
+  color: var(--color-azure-35, #37517e);
+  text-align: center;
+  font-family: var(--semantic-heading-2-font-family, "Jost-Bold", sans-serif);
+  font-size: var(--semantic-heading-2-font-size, 32px);
+  line-height: var(--semantic-heading-2-line-height, 38.4px);
+  font-weight: var(--semantic-heading-2-font-weight, 700);
+  text-transform: uppercase;
+  text-decoration: underline;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 100px;
 }
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
- .logo {
-     position: relative;
-     width: 113px;
-     height: 200px;
- }
-  .logoimg{
-    position: absolute;
-    width: 293px;
-    height: 285px;
-    top: -89px;
-    left: 737px;
-  }
-  .text-a {
-color: #ffffff;
-    position: absolute;
-    height: 117px;
-    top: 95px;
-    left: 794px;
-    font-family: "Inknut Antiqua", Helvetica;
-    font-weight: 400;
-    font-size: 30px;
-    letter-spacing: 0;
-    line-height: normal;
+.logo {
+  position: relative;
+  width: 113px;
+  height: 200px;
 }
-  
-  .text-k {
-color: #ffffff;
-    position: absolute;
-    height: 17px;
-    top: 150px;
-    left: 851px;
-    font-family: "Inria Sans", Helvetica;
-    font-weight: 700;
-    font-size: 36px;
-    letter-spacing: 5.18px;
-    line-height: normal;
-  }
+.logoimg {
+  position: absolute;
+  width: 293px;
+  height: 285px;
+  top: -89px;
+  left: 737px;
+}
+.text-a {
+  color: #ffffff;
+  position: absolute;
+  height: 117px;
+  top: 95px;
+  left: 794px;
+  font-family: "Inknut Antiqua", Helvetica;
+  font-weight: 400;
+  font-size: 30px;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
+.text-k {
+  color: #ffffff;
+  position: absolute;
+  height: 17px;
+  top: 150px;
+  left: 851px;
+  font-family: "Inria Sans", Helvetica;
+  font-weight: 700;
+  font-size: 36px;
+  letter-spacing: 5.18px;
+  line-height: normal;
+}
 
 header {
-    background: #37517e;
-    color: white;
-    padding: 20px;
-    text-align: center;
+  background: #37517e;
+  color: white;
+  padding: 20px;
+  text-align: center;
 }
 
 h1 {
-    margin: 0;
+  margin: 0;
 }
 h2:hover {
-    text-shadow: #37517e45 0px 1px 5px;
+  text-shadow: #37517e45 0px 1px 5px;
 }
-.contect{
-    font-style: italic;
-    font-size: large;
+.contect {
+  font-style: italic;
+  font-size: large;
 }
-.name{
-    color: #00000045;
+.name {
+  color: #00000045;
 }
 a {
-    color: #37517e;
-    /* Inherit color from parent */
-    text-decoration: none;
-    /* Optional: Remove underline */
+  color: #37517e;
+  /* Inherit color from parent */
+  text-decoration: none;
+  /* Optional: Remove underline */
 }
 main {
-    padding: 20px;
-    padding-top:50px ;
-    padding-left: 100px;
-    padding-right: 100px;
-    max-width: 800px;
-    margin: 0 auto;
-    background: white;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    margin-top: 87px;
+  padding: 20px;
+  padding-top: 50px;
+  padding-left: 100px;
+  padding-right: 100px;
+  max-width: 800px;
+  margin: 0 auto;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  margin-top: 87px;
 }
 
 section {
-    margin-bottom: 20px;
-    margin-bottom: 110px;
-    padding-right: 50px;
-    padding-left: 50px;
+  margin-bottom: 20px;
+  margin-bottom: 110px;
+  padding-right: 50px;
+  padding-left: 50px;
 }
 
 h2 {
-    color: #37517e;
-    padding-bottom: 30px;
-    font-size: 28px;
-    text-align: center;
+  color: #37517e;
+  padding-bottom: 30px;
+  font-size: 28px;
+  text-align: center;
 }
 
 ul {
-    
-    list-style-type: disc;
-    margin-left: 20px;
+  list-style-type: disc;
+  margin-left: 20px;
 }
 
 footer {
-    text-align: center;
-    padding: 10px;
-    background: #007BFF;
-    color: white;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-    margin-top: 20px;
+  text-align: center;
+  padding: 10px;
+  background: #007bff;
+  color: white;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  margin-top: 20px;
 }
