--- a/css/style.css
+++ b/css/style.css
@@ -4724,7 +4724,7 @@ margin-left: 650px;
   margin-top: 30px;
   font-family: "Open Sans",Helvetica;
   color: #444444;
-  font-size: var(--open-sans-regular-13-font-family: "Open Sans", Helvetica;);
+  font-size: var(--open-sans-regular-13-font-family: "Open Sans", Helvetica);
 }
 
 
