--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,65 @@
+.abcd {
+  margin-left: 20px;
+}
 
+.form-control {
+  position: relative;
+  margin: 40px 0 40px;
+  margin-left: 321px;
+  width: 430px;
+}
 
-body {
+.form-control input {
+  background-color: transparent;
+  border: 0;
+  border-bottom: 2px #000000 solid;
+  display: block;
+  width: 100%;
+  padding: 15px 0;
+  font-size: 18px;
+  color: #000000;
+}
+
+.form-control input:focus,
+.form-control input:valid {
+  outline: 0;
+  border-bottom-color: rgb(0, 0, 0);
+}
+
+.form-control label {
+  position: absolute;
+  top: 15px;
+  left: 0;
+  pointer-events: none;
+}
+
+.form-control label span {
+  display: inline-block;
+  font-size: 15px;
+  min-width: 5px;
+  color: #000000;
+  transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  padding-left: 5px;
+}
+
+.form-control input:focus+label span,
+.form-control input:valid+label span {
+  color: rgb(14, 123, 159);
+  transform: translateY(-30px);
+}
+
+.container {
+  display: flex;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  width: 80%;
+  overflow: hidden;
+  height: 90vh;
+  flex-direction: row-reverse;
+}
+
+.body {
   font-family: Arial, sans-serif;
   display: flex;
   justify-content: center;
@@ -9,180 +68,312 @@ body {
   background-color: #f4f8fb;
 }
 
-.container {
-  display: flex;
-  flex-direction: row-reverse;
-  width: 80%;
-  height: 90vh;
-  background-color: white;
-  border-radius: 8px;
-  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
+.login-form {
+  position: relative;
+  left: -218px;
+  top: 230px;
+  height: inherit;
+  width: inherit;
 }
 
 
-.form-section {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 40px;
-  background-color: #fff;
+.select {
+
+  --radius: 8px;
+  --border: 4px;
+  --height: 48px;
+  --speed: 0.25s;
   position: relative;
+  left: 46px;
+  top: 70px;
+  padding-bottom: 30px;
+  display: grid;
+  place-items: center;
+  align-content: center;
+  font-family: "SF Pro Text", "SF Pro Icons", "AOS Icons", "Helvetica Neue",
+    Helvetica, Arial, sans-serif, system-ui;
+}
+
+.subtitle {
+  color: var(--color-azure-35, #000000);
+  opacity: 0.8;
+  text-align: center;
+  font-family: var(--semantic-heading-2-font-family, "Jost-Bold", sans-serif);
+  font-size: 20px;
+  line-height: var(--semantic-heading-2-line-height, 38.4px);
+  font-weight: var(--semantic-heading-2-font-weight, 700);
+  text-transform: uppercase;
+  text-decoration: underline;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  right: 89px;
+
+}
+
+.login {
+  position: relative;
+  width: fit-content;
+  top: 196px;
+  left: -789px;
+  text-align: center;
+  letter-spacing: var(--semantic-heading-2-letter-spacing);
+  line-height: var(--semantic-heading-2-line-height);
+  white-space: nowrap;
+  font-style: var(--semantic-heading-2-font-style);
+}
+
+.form {}
+
+.title {
+  position: relative;
+  width: fit-content;
+  margin-top: -1px;
+  margin-left: -0.27px;
+  margin-right: -0.27px;
+  padding-bottom: 10px;
+  font-family: var(--semantic-heading-2-font-family);
+  font-weight: var(--semantic-heading-2-font-weight);
+  color: #000000;
+  font-size: 50px;
+  text-align: center;
+  letter-spacing: var(--semantic-heading-2-letter-spacing);
+  line-height: var(--semantic-heading-2-line-height);
+  white-space: nowrap;
+  font-style: var(--semantic-heading-2-font-style);
+
 }
 
 .logo {
+  margin-top: 25px;
+  position: relative;
+  width: 117px;
+  height: 95px;
+  right: 1382px;
+}
+
+.overlap-group {
+  position: relative;
+  width: 113px;
+  height: 95px;
+}
+
+.untitled {
   position: absolute;
-  top: 20px;
-  left: 20px;
-  display: flex;
-  align-items: center;
-  gap: 10px; 
+  width: 93px;
+  height: 85px;
+  top: 0;
+  left: 0;
 }
 
-.logoimg {
-  width: 100px; 
-  height: auto;
-}
-
-.text-container {
-  display: flex;
-  flex-direction: column;
-}
-
-.text-a {
-  color: black;
+.text-wrapper {
+  color: #000000;
   position: absolute;
-  height: 117px;
+  height: 39px;
   top: 50px;
+  left: 17px;
   font-family: "Inknut Antiqua", Helvetica;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 15px;
   letter-spacing: 0;
   line-height: normal;
 }
 
-.text-k {
-  color:black;
+.text-wrapper-2 {
+  color: #000000;
   position: absolute;
   height: 17px;
-  top: 85px;
-  left: 42px;
+  top: 78px;
+  left: 43px;
   font-family: "Inria Sans", Helvetica;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 14px;
   letter-spacing: 5.18px;
   line-height: normal;
 }
 
-
-
-h2 {
-  color: #333;
-  font-size: 2rem;
-  margin-bottom: 1rem;
-  text-align: center;
+.option {
+  height: var(--height);
+  display: grid;
+  grid-auto-flow: column;
+  background: hsl(0 0% 0%);
+  border-radius: var(--radius);
+  grid-auto-columns: 1fr;
+  position: relative;
+  border: var(--border) solid hsl(0 0% 0%);
 }
 
-.intro-text {
-  text-align: center;
-  font-size: 1.5rem;
-  margin-bottom: 10px;
+.option {
+  --ease: linear(0,
+      0.1641 3.52%,
+      0.311 7.18%,
+      0.4413 10.99%,
+      0.5553 14.96%,
+      0.6539 19.12%,
+      0.738 23.5%,
+      0.8086 28.15%,
+      0.8662 33.12%,
+      0.9078 37.92%,
+      0.9405 43.12%,
+      0.965 48.84%,
+      0.9821 55.28%,
+      0.992 61.97%,
+      0.9976 70.09%,
+      1);
 }
+
+.option>.input,
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+
+.option:has(:checked:nth-of-type(1)) {
+  --active: 0;
+}
+
+.option:has(:checked:nth-of-type(2)) {
+  --active: 1;
+}
+
+.option:has(:checked:nth-of-type(3)) {
+  --active: 2;
+}
+
+.option:has(:checked:nth-of-type(4)) {
+  --active: 3;
+}
+
+.option :checked+.label {
+  --highlight: 1;
+}
+
+.option:has(.input:nth-of-type(2)) {
+  --count: 2;
+}
+
+.option:has(.input:nth-of-type(3)) {
+  --count: 3;
+}
+
+.option:has(.input:nth-of-type(4)) {
+  --count: 4;
+}
+
+.option .label {
+  padding: 0 clamp(10px, 10px + 10px, 20px);
+  cursor: pointer;
+  text-align: center;
+  height: 100%;
+  display: grid;
+  border-radius: calc(var(--radius) - var(--border));
+  place-items: center;
+  color: hsl(0 0% 100% / calc(0.5 + var(--highlight, 0)));
+  transition: background, color;
+  transition-duration: 0.25s;
+  transition-timing-function: var(--ease, ease);
+}
+
+.input:not(:checked)+.label:hover {
+  --highlight: 0.35;
+  background: hsl(0 0% 20%);
+}
+
+.option::after {
+  pointer-events: none;
+  content: "";
+  width: calc(100% / var(--count));
+  height: 100%;
+  background: hsl(0 0% 100%);
+  position: absolute;
+  border-radius: calc(var(--radius) - var(--border));
+  mix-blend-mode: difference;
+  translate: calc(var(--active, 0) * 100%) 0;
+  transition: translate, outline-color;
+  transition-duration: var(--speed);
+  transition-timing-function: var(--ease, ease);
+  outline: 2px solid transparent;
+}
+
+.option:has(:focus-visible)::after {
+  outline-color: red;
+}
+
+
 
 .input-group {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  margin-top: 20px;
+  gap: 1rem;
+  max-width: 400px;
+  padding-top: 30px;
+  margin: 0 auto;
+  left: 47px;
+  top: 50px;
+  position: relative;
 }
 
 .input-wrapper {
   position: relative;
-  display: flex;
-  flex-direction: column;
 }
 
 .input-wrapper input {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 1rem;
-}
-
-
-
-.radiobutton {
-  margin-bottom: 8px;
-  display: flex;
-  justify-content: space-between;
   width: 100%;
-  gap: 30px;
-  align-items: center;
-}
-
-.radiobutton input[type="radio"] {
-  margin-right: 8px;
-}
-
-.radiobutton label {
-  font-size: 16px;
-  color: #333;
-  cursor: pointer;
-}
-
-.radiobutton input[type="radio"]:hover + label {
-  color: #007bff;
-  font-weight: bold;
-}
-
-.radiobutton input[type="radio"]:checked + label {
-  color: #0056b3;
-  font-weight: bold;
-}
-.label {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  transition: all 0.3s ease;
-  color: #777;
-}
-
-.input-wrapper input:focus + .label,
-.input-wrapper input:not(:placeholder-shown) + .label {
-  top: -8px;
-  font-size: 12px;
-  color: black;
-  background-color: #f2f2f2;
-  padding: 0 4px;
-  left: 10px;
-}
-.checkbox-group {
-  margin-top: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 10px;
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1rem;
   margin-bottom: 20px;
 }
 
-#forgot-pass a {
-  color: #007bff;
-  text-decoration: none;
-  font-size: 14px;
+.input-wrapper label {
+  position: absolute;
+  top: 28%;
+  left: 22px;
+  transform: translateY(-50%);
+  font-size: 1rem;
+  color: #999;
+  transition: 0.3s ease all;
 }
 
-#forgot-pass a:hover {
-  text-decoration: underline;
+.input-wrapper input:focus+label,
+.input-wrapper input:not(:placeholder-shown)+label {
+  top: -3px;
+  font-size: 0.8rem;
+  color: #007bff;
+  background-color: white;
+  padding-left: 3px;
+  padding-right: 3px;
+}
+
+.checkbox-group {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 1rem;
+}
+
+.checkbox-group div {
+  display: flex;
+  align-items: center;
 }
 
 .checkbox-group input {
-  margin-right: 10px;
+  margin-right: 0.5rem;
 }
 
 .btn {
-  margin-top: 20px;
+  margin-top: 100px;
   width: 100%;
+  margin-left: 100px;
   padding: 10px;
   background-color: #4a56e2;
   border: none;
@@ -195,9 +386,12 @@ h2 {
 .btn:hover {
   background-color: green;
 }
+
 .btn {
-  width: 100%;
+  width: 40%;
   height: 50px;
+  margin-left: 370px;
+  top: -30px;
   border: none;
   outline: none;
   color: #fff;
@@ -208,20 +402,36 @@ h2 {
   border-radius: 10px;
 }
 
+#forgot-pass {
+  position: relative;
+  left: -290px;
+  color: #007bff;
+  top: 40px;
+}
+
+#forgot-pass:hover {
+  color: #001f3f;
+  cursor: pointer;
+}
+
+.remember-me {
+  position: relative;
+  left: 380px;
+  top: 40px;
+}
+
 .btn:before {
   content: "";
-  background: linear-gradient(
-    45deg,
-    #ff0000,
-    #ff7300,
-    #fffb00,
-    #48ff00,
-    #00ffd5,
-    #002bff,
-    #7a00ff,
-    #ff00c8,
-    #ff0000
-  );
+  background: linear-gradient(45deg,
+      #ff0000,
+      #ff7300,
+      #fffb00,
+      #48ff00,
+      #00ffd5,
+      #002bff,
+      #7a00ff,
+      #ff00c8,
+      #ff0000);
   position: absolute;
   top: -2px;
   left: -2px;
@@ -264,64 +474,57 @@ h2 {
   0% {
     background-position: 0 0;
   }
+
   50% {
     background-position: 400% 0;
   }
+
   100% {
     background-position: 0 0;
   }
 }
 
-.or-option {
-  margin-top: 20px;
-  text-align: center;
-  font-size: 1.2rem;
-}
-
 .login-text {
   font-size: 1.2rem;
   text-align: center;
-  margin-top: 40px;
+  margin-top: 7px;
   color: #666;
+  margin-left: 50px;
 }
 
-.social-icons {
-  display: flex;
-  justify-content: center;
-  margin-top: 30px;
-  gap: 20px;
+.or-option {
+  font-size: 1.2rem;
+  text-align: center;
+  margin-top: 10px;
+  color: #666;
+  margin-bottom: 20px;
 }
 
-.social-icons a {
-  transition:filter 0.5s ease;
+.signup {
+  color: #007bff;
 }
 
-.social-icons a:hover {
-  filter: invert(29%) sepia(73%) saturate(747%) hue-rotate(172deg) brightness(95%) contrast(92%);
+.signup:hover {
+  color: #001f3f;
+  cursor: pointer;
 }
 
-.social-icons img {
-  width: 30px;
+.sid-img {
+  /* border: 2px solid #000; */
+  position: fixed;
+  display: inline-block;
+  width: 792px;
+  height: 770px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 10px;
 }
 
-.error-message {
-  font-size: 0.875rem;
-  color: red;
-  margin-top: 5px;
-  display: block;
-}
+/* .imag{
+        height: 650px;
+} */
+.sid-img img {
 
-.image-section {
-  width: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #e3effb;
-  padding: 20px;
-}
-
-.image-section img {
-  width: 100%;
-  height: auto;
-  border-radius: 8px;
+  height: 770px;
+  width: 792px;
 }
