--- a/css/signup.css
+++ b/css/signup.css
@@ -83,7 +83,7 @@ body {
   left: 42px;
   font-family: "Inria Sans", Helvetica;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 16px;
   letter-spacing: 5.18px;
   line-height: normal;
 }
@@ -121,6 +121,13 @@ p {
   width: 100%;
   position: relative;
   margin-bottom: 20px;
+}
+.input-wrapper p{
+  color: red;
+  font-size: 0.875rem;
+  margin-top: 5px;
+  display: block;
+  font-weight: bold;
 }
 
 .input-wrapper input {
